--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 # PyDrop - Local File Sharing Application
 
 # Core
-zeroconf>=0.40.0
 websockets>=12.0
-qrcode>=7.4
-pillow>=10.0
+qrcode[pil]>=7.4
 aiohttp>=3.9
+
+# GUI
+customtkinter>=5.0
 
 # Build executable
 pyinstaller>=6.0
