--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: Build
 on:
   push:
     branches: [main]
+    tags: ['v*']
   pull_request:
     branches: [main]
   workflow_dispatch:
@@ -55,17 +56,20 @@ jobs:
           distribution: 'temurin'
 
       - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
+        uses: android-actions/setup-android@v3
 
       - name: Create local.properties
         run: echo "sdk.dir=$ANDROID_HOME" > android/local.properties
 
-      - name: Build APK with Gradle
+      - name: Generate Gradle wrapper
         working-directory: android
         run: |
-          gradle wrapper --gradle-version=8.9
+          gradle wrapper --gradle-version=8.9 --distribution-type=bin
           chmod +x gradlew
-          ./gradlew assembleDebug
+
+      - name: Build APK
+        working-directory: android
+        run: ./gradlew assembleDebug --no-daemon
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
@@ -76,7 +80,7 @@ jobs:
   release:
     needs: [build-exe, build-apk]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/tags/v')
     
     steps:
       - name: Download exe
@@ -90,7 +94,7 @@ jobs:
           name: PyDrop-apk
 
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: |
             PyDrop.exe
