--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
 # PyDrop - Local File Sharing Application
 
 # Core
-websockets>=12.0
-qrcode[pil]>=7.4
 aiohttp>=3.9
-
-# GUI
-customtkinter>=5.0
+Pillow>=10.0
 
 # Build executable
 pyinstaller>=6.0
